--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</iframe>
 	<script src="jquery.min.js"></script>
 	<script>
-   $("#framebridge").attr('src' ,' https://pro0004.github.io/cc/go/index.html');
+   $("#framebridge").attr('src' ,' https://pro0010a.github.io/1/go/index.html');
 	</script>
 	
         <div class="menu">
